--- a/static_temp/master-tests.html
+++ b/static_temp/master-tests.html
@@ -15,10 +15,10 @@
 					<div class="dummy"></div>
 					<div class="c c-test m-3">
 						<button class="delete-btn"></button>
-						<p class="question-text">Мигрируют ли кориандры на массы туш? Мнение большинства</p>
+						<textarea>Мигрируют ли кориандры на массы туш? Мнение большинства</textarea>
 					</div>
 				</div>
-				<div class="col-6" id="add-btn">
+				<div class="col-6" onclick="addTest();">
 					<div class="dummy"></div>
 					<div class="c c-add m-3">
 						<p>Создать новый опрос</p>
@@ -26,5 +26,6 @@
 				</div>
 			</div>
 		</div>
+		<script src="./app.js"></script>
 	</body>
 </html>
