--- a/vkapp_node/public/index.html
+++ b/vkapp_node/public/index.html
@@ -50,6 +50,8 @@
 <body class="hands">
   <div id="root">
   </div>
+  <script src="/jquery-3.1.0.min.js"></script>
   <script src="/app.js"></script>
+  <script>window.onload = () => {document.getElementById('mainButton').addEventListener('click', openCodeForm)};</script>
 </body>
 </html>
