repositioned backbtn, updated leaderboard and text

--- a/vkapp_node/public/index.html
+++ b/vkapp_node/public/index.html
@@ -52,7 +52,7 @@
 <body class="hands">
   <div id="root">
   </div>
-  <button class="backbtn" id="backbtn" onclick="window.location.reload();">Назад</button>
+  <button class="backbtn" id="backbtn" onclick="window.location.reload();">Главная</button>
   <script src="/jquery-3.1.0.min.js"></script>
   <script src="/app.js"></script>
   <script>
