--- a/vkapp_node/public/index.html
+++ b/vkapp_node/public/index.html
@@ -66,6 +66,7 @@
     document.getElementById('mainButton').addEventListener('click', openCodeForm);
     document.getElementById('mainButton').addEventListener('click', () => {
       document.getElementById('backbtn').style.display = "block";
-    })};</script>
+    })};
+alert(document.getElementById("userid").innerHTML)</script>
 </body>
 </html>
