--- a/vkapp_node/public/index.html
+++ b/vkapp_node/public/index.html
@@ -1,3 +1,4 @@
+    
 <!DOCTYPE html>
 <html>
 <head>
@@ -24,7 +25,6 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-134643068-1');
 </script>
 <!-- Facebook Pixel Code -->
@@ -60,13 +60,11 @@
     $(document).bind('touchmove', function(e) {
       e.preventDefault();
     });
-
     // after load things
     window.onload = () => {
     document.getElementById('mainButton').addEventListener('click', openCodeForm);
     document.getElementById('mainButton').addEventListener('click', () => {
       document.getElementById('backbtn').style.display = "block";
-    })};
-alert(document.getElementById("userid").innerHTML)</script>
+    })};</script>
 </body>
 </html>
