started doing changes for VK conference

--- a/vkapp_node/public/index.html
+++ b/vkapp_node/public/index.html
@@ -46,8 +46,10 @@
     <!-- End Facebook Pixel Code -->
     <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?160",t.onload=function(){VK.Retargeting.Init("VK-RTRG-335322-e3qFt"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-335322-e3qFt" style="position:fixed; left:-999px;" alt=""/></noscript>    
   <link href='/Montserrat.css' rel="stylesheet">
+  <link href='/TT_Commons.css' rel="stylesheet">
   <title>HandsApp</title>
   <link href='/style.css' rel="stylesheet">
+  <link href='/vk_override.css' rel='stylesheet'>
 </head>
 <body class="hands">
   <div id="root">
