--- a/vkapp_node/public/index.html
+++ b/vkapp_node/public/index.html
@@ -54,7 +54,7 @@
 <body class="hands">
   <div id="root">
   </div>
-  <button class="backbtn" id="backbtn" onclick="window.location.reload();">Главная</button>
+  <button class="backbtn" id="backbtn" onclick="window.location.reload();">НАЗАД</button>
   <script src="/jquery-3.1.0.min.js"></script>
   <script src="/app.js"></script>
   <script>
