text size change, removed backbtn

--- a/vkapp_node/public/index.html
+++ b/vkapp_node/public/index.html
@@ -65,8 +65,6 @@
     // after load things
     window.onload = () => {
     document.getElementById('mainButton').addEventListener('click', openCodeForm);
-    document.getElementById('mainButton').addEventListener('click', () => {
-      document.getElementById('backbtn').style.display = "block";
-    })};</script>
+  </script>
 </body>
 </html>
